// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RoomListItemMenuView /> should render the more options menu 1`] = `
<DocumentFragment>
  <div
    class="mx_Flex mx_RoomListItemMenuView"
    style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-0-5x); --mx-flex-wrap: nowrap;"
  >
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="More Options"
      aria-labelledby=":r2:"
      class="_icon-button_m2erp_8"
      data-state="closed"
      id="radix-:r0:"
      role="button"
      style="--cpd-icon-button-size: 24px;"
      tabindex="0"
      type="button"
    >
      <div
        class="_indicator-icon_zr2a0_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 14q-.824 0-1.412-.588A1.93 1.93 0 0 1 4 12q0-.825.588-1.412A1.93 1.93 0 0 1 6 10q.824 0 1.412.588Q8 11.175 8 12t-.588 1.412A1.93 1.93 0 0 1 6 14m6 0q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 12q0-.825.588-1.412A1.93 1.93 0 0 1 12 10q.825 0 1.412.588Q14 11.175 14 12t-.588 1.412A1.93 1.93 0 0 1 12 14m6 0q-.824 0-1.413-.588A1.93 1.93 0 0 1 16 12q0-.825.587-1.412A1.93 1.93 0 0 1 18 10q.824 0 1.413.588Q20 11.175 20 12t-.587 1.412A1.93 1.93 0 0 1 18 14"
          />
        </svg>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Notification options"
      aria-labelledby=":r9:"
      class="_icon-button_m2erp_8"
      data-state="closed"
      id="radix-:r7:"
      role="button"
      style="--cpd-icon-button-size: 24px;"
      tabindex="0"
      type="button"
    >
      <div
        class="_indicator-icon_zr2a0_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m4.917 2.083 17 17a1 1 0 0 1-1.414 1.414L19.006 19H4.414c-.89 0-1.337-1.077-.707-1.707L5 16v-6s0-2.034 1.096-3.91L3.504 3.498a1 1 0 0 1 1.414-1.414M19 13.35 9.136 3.484C9.93 3.181 10.874 3 12 3c7 0 7 7 7 7z"
          />
          <path
            d="M10 20h4a2 2 0 0 1-4 0"
          />
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<RoomListItemMenuView /> should render the notification options menu 1`] = `
<DocumentFragment>
  <div
    class="mx_Flex mx_RoomListItemMenuView"
    style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-0-5x); --mx-flex-wrap: nowrap;"
  >
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="More Options"
      aria-labelledby=":ri:"
      class="_icon-button_m2erp_8"
      data-state="closed"
      id="radix-:rg:"
      role="button"
      style="--cpd-icon-button-size: 24px;"
      tabindex="0"
      type="button"
    >
      <div
        class="_indicator-icon_zr2a0_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 14q-.824 0-1.412-.588A1.93 1.93 0 0 1 4 12q0-.825.588-1.412A1.93 1.93 0 0 1 6 10q.824 0 1.412.588Q8 11.175 8 12t-.588 1.412A1.93 1.93 0 0 1 6 14m6 0q-.825 0-1.412-.588A1.93 1.93 0 0 1 10 12q0-.825.588-1.412A1.93 1.93 0 0 1 12 10q.825 0 1.412.588Q14 11.175 14 12t-.588 1.412A1.93 1.93 0 0 1 12 14m6 0q-.824 0-1.413-.588A1.93 1.93 0 0 1 16 12q0-.825.587-1.412A1.93 1.93 0 0 1 18 10q.824 0 1.413.588Q20 11.175 20 12t-.587 1.412A1.93 1.93 0 0 1 18 14"
          />
        </svg>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Notification options"
      aria-labelledby=":rp:"
      class="_icon-button_m2erp_8"
      data-state="closed"
      id="radix-:rn:"
      role="button"
      style="--cpd-icon-button-size: 24px;"
      tabindex="0"
      type="button"
    >
      <div
        class="_indicator-icon_zr2a0_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m4.917 2.083 17 17a1 1 0 0 1-1.414 1.414L19.006 19H4.414c-.89 0-1.337-1.077-.707-1.707L5 16v-6s0-2.034 1.096-3.91L3.504 3.498a1 1 0 0 1 1.414-1.414M19 13.35 9.136 3.484C9.93 3.181 10.874 3 12 3c7 0 7 7 7 7z"
          />
          <path
            d="M10 20h4a2 2 0 0 1-4 0"
          />
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
